--- a/ch03.firWatch/fireWatch.html
+++ b/ch03.firWatch/fireWatch.html
@@ -11,8 +11,14 @@
         <a id="title" class="button-in-header" href="#document-title">THE MOUNTAIN</a>
         <div id="right-buttons">
             <a id="active-menu" href="" class="button-in-header active-menu">MOUNTAIN</a>
-            <a  href="" class="button-in-header">AMAZING BLOG</a>
-            <a  href="" class="button-in-header">AMAZING NEWS</a>
+            <a  href="" class="button-in-header">
+				<span class="long-text">AMAZING BLOG</span>
+				<span class="short-text">BLOG</span>
+			</a>
+            <a  href="" class="button-in-header">
+				<span class="long-text">AMAZING NEWS</span>
+				<span class="short-text">NEWS</span>
+			</a>
         </div>
     </header>
 
@@ -1542,6 +1548,8 @@
 
 </body>
     <script>
+		// 뷰포드 너비 알기
+		
         const sun = document.getElementById("sun")
         const grayCloud = document.getElementById("gray-clouds");
         const whiteCloud = document.getElementById("white-clouds");
@@ -1557,31 +1565,52 @@
         const mountain6 = document.getElementById("mountain6");
         const mountain7 = document.getElementById("mountain7");
 
-
-        window.addEventListener("scroll",() => {
-            sun.style.transform = `translateY(${window.scrollY * 1.05}px)`;
-
-            grayCloud.style.transform = `translateX(${window.scrollY * 0.25}px)`;
-            whiteCloud.style.transform = `translateX(${window.scrollY * -0.125}px)`;
-
-            bird1.style.transform = `translateX(${window.scrollY * 1}px)`;
-            bird2.style.transform = `translateX(${window.scrollY * 3.55}px)`;
-            bird3.style.transform = `translateX(${window.scrollY * 0.5}px)`;
-
-            mountain0.style.transform = `translateY(${window.scrollY * 0.95}px)`;
-            mountain1.style.transform = `translateY(${window.scrollY * 0.93}px)`;
-            mountain2.style.transform = `translateY(${window.scrollY * 0.9}px)`;
-            mountain3.style.transform = `translateY(${window.scrollY * 0.8}px)`;
-            mountain4.style.transform = `translateY(${window.scrollY * 0.7}px)`;
-            mountain5.style.transform = `translateY(${window.scrollY * 0.6}px)`;
-            mountain6.style.transform = `translateY(${window.scrollY * 0.3}px)`;
-            mountain7.style.transform = `translateY(${window.scrollY * 0.1}px)`;
-
-
+		window.addEventListener("scroll", () => {
+			clientWidth = document.documentElement.clientWidth;
+			if(clientWidth > 800){
+				sun.style.transform = `translateY(${window.scrollY * 1.05}px)`;
+				grayCloud.style.transform = `translateX(${window.scrollY * 0.25}px)`;
+				whiteCloud.style.transform = `translateX(${window.scrollY * -0.125}px)`;
+				bird1.style.transform = `translateX(${window.scrollY * 1}px)`;
+				bird2.style.transform = `translateX(${window.scrollY * 3.55}px)`;
+				bird3.style.transform = `translateX(${window.scrollY * 0.5}px)`;
+				mountain0.style.transform = `translateY(${window.scrollY * 0.95}px)`;
+				mountain1.style.transform = `translateY(${window.scrollY * 0.93}px)`;
+				mountain2.style.transform = `translateY(${window.scrollY * 0.9}px)`;
+				mountain3.style.transform = `translateY(${window.scrollY * 0.8}px)`;
+				mountain4.style.transform = `translateY(${window.scrollY * 0.7}px)`;
+				mountain5.style.transform = `translateY(${window.scrollY * 0.6}px)`;
+				mountain6.style.transform = `translateY(${window.scrollY * 0.3}px)`;
+				mountain7.style.transform = `translateY(${window.scrollY * 0.1}px)`;
+			}
         });
 
+		window.addEventListener("resize", () => {
+			
+			clientWidth = document.documentElement.clientWidth;
+			
+			if(clientWidth < 800){
+				sun.style.transform = `translateY(0px)`;
+				grayCloud.style.transform = `translateX(0px)`;
+				whiteCloud.style.transform = `translateX(0px)`;
+				bird1.style.transform = `translateX(0px`;
+				bird2.style.transform = `translateX(0px)`;
+				bird3.style.transform = `translateX(0px)`;
+				mountain0.style.transform = `translateY(0px)`;
+				mountain1.style.transform = `translateY(0px)`;
+				mountain2.style.transform = `translateY(0px)`;
+				mountain3.style.transform = `translateY(0px)`;
+				mountain4.style.transform = `translateY(0px)`;
+				mountain5.style.transform = `translateY(0px)`;
+				mountain6.style.transform = `translateY(0px)`;
+				mountain7.style.transform = `translateY(0px)`;
+			}
+		});
+
+
+
         document.querySelectorAll("#right-buttons .button-in-herader").forEach((element) =>{
-            element.addEventListner("click",(event) =>{
+            element.addEventListener("click",(event) =>{
                 document.getElementById("active-menu").removeAttribute("id");
                 element.setAttribute("id","active-menu");
             });
@@ -1596,5 +1625,11 @@
                 behavior: "smooth"
             });
         });
+
+
+
+		
+
+		
     </script>
 </html>
