--- a/ch04/index.html
+++ b/ch04/index.html
@@ -54,15 +54,21 @@
     <li class="list-item">축구선수</li>
     <li class="list-item">마이너스통장대출</li>
   </ul>
+  <main>
+    <section id ="pannel-img">
+      <img id="flying-santa-image" src="./santa_flying.png" alt="santa">
+    </section>    
+  </main>
 </body>
 
 <script>
   const listStyleChangeStartY = 373
   const listStyleChangeEndY = 1585
-
   const listItems = document.querySelectorAll('.list-item')
-
   const division = (listStyleChangeEndY - listStyleChangeStartY) / listItems.length
+  const pannel1Img = document.getElementById('pannel-img')
+  const flyingSantaImage = document.getElementById("flying-santa-image");
+  
 
   window.addEventListener("scroll", () => {
     if (document.getElementById("on")) document.getElementById("on").removeAttribute("id")
@@ -72,7 +78,23 @@
 
       listItems[targetIndex].id = "on"
     }
-  })
+
+    const scrollYBottom = window.scrollY + document.documentElement.clientHeight;
+ 
+
+    if(scrollYBottom > pannel1Img.offsetTop && scrollYBottom < pannel1Img.offsetTop + pannel1Img.offsetHeight + 100 ){
+      const translateX = 80 - 80 * 1.3 * (scrollYBottom - pannel1Img.offsetTop) / (pannel1Img.offsetHeight + 100)
+      const translateY = 13 + 13 * (scrollYBottom - pannel1Img.offsetTop) / (pannel1Img.offsetHeight + 100)
+      const rotationDegree = 23 - 23 * 1.7 * (scrollYBottom - pannel1Img.offsetTop) / (pannel1Img.offsetHeight + 100)
+
+      flyingSantaImage.style.transform = `translate(${translateX}px, ${translateY}px) rotate(${rotationDegree}deg)`
+      
+    }
+
+
+    
+  }) 
+
 </script>
 
 </html>
