오늘은여기까지

--- a/canvas1/one.html
+++ b/canvas1/one.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gooey</title>
     <style>
         html, body{
             margin: 0;
@@ -12,13 +12,20 @@
             overflow:hidden;
         }
         canvas{
-            background-color: #f1f1f1;
+            filter:url('#gooey');
         }
     </style>
 </head>
 <body>
     <canvas>
-
+        <svg>
+            <defs>
+                <filter id="gooey">
+                    <feGaussianBlur stdDeviation="40" in="SourceGraphic" result="blur1"/> <!-- 가로 블러, 세로 블러 -->
+                    <feColorMatrix in="blur1" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 100 -23" />
+                </filter>
+            </defs>
+        </svg>
     </canvas>
 
 
